[package]
name = "js"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Reused JS engine (pure Rust). Walled off behind our own Runtime API so it can be
# replaced by a hand-written engine later — same pattern as net/ureq and paint/fontdue.
boa_engine = "0.21"
# The real DOM, so page scripts can read and mutate the live document tree.
dom = { path = "../dom" }
